# albums-api-rust

./: API-DESIGN.md  Cargo.toml  README.md  albums.db
front-end/: README.md  package-lock.json  package.json
front-end/public/: index.html  styles.css
front-end/src/: app.js
src/: album.rs  comment.rs  main.rs  post-test.py  sql.rs  sql_proxy.rs
