[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.37"
rusqlite = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
